# Rover

./: .gitignore  app.py  main.py  pyproject.toml  render.yaml  requirement.txt  requirements.txt
Crds/: __init__.py  assign_coordinates.py  auth.py  delete_rover.py  get_position.py  get_rover_command.py  master.py  master_config.py  master_release.py  models.py  rovers.py  stop_all.py  system_setup.py  test_position.py  update_position.py  users.py
Crds/models/: models.py
Crds/static/css/: assign.css  index.css  login.css  signup.css  style.css  system_setup.css  welcome.css
Crds/static/js/: dashboard.js
Crds/templates/: assign.html  index.html  login.html  signup.html  system_setup.html  welcome.html
instance/: rovers.db  site.db
static/: style.css
static/css/: style.css
static/js/: dashboard.js
templates/: assign.html  index.html
