[project]
name = "mini-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "blueprint>=3.4.2",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]
